--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "dependencies": {
     "chart.js": "^4.5.0",
     "next": "15.3.4",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
