--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "next": "15.3.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-ios-time-picker": "^0.2.2",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
